k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management
  labels:
    app: employee-management
    version: v1
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/actuator/prometheus"
spec:
  type: ClusterIP
  selector:
    app: employee-management
  ports:
    - name: http
      port: 80
      targetPort: 8080
