k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
spec:
  rules:
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-management
                port:
                  number: 80
